# bener-bot

./: .env.example  CMakeLists.txt  README.md
src/: json_utils.c  json_utils.h  main.c  memory_graph.c  memory_graph.h  ollama_client.c  ollama_client.h  tools.c  tools.h
